vlib/v/parser/tests/type_alias_same_type_err.vv
type Foo = Foo

fn main() {
    
}
